<resources>
    <string name="app_name">Notes</string>

    <string name="note_heading">Заголовок заметки</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_delete">←</string>
    <string name="enter_pin">Enter new pin:</string>
    <string name="noteText">Текст заметки</string>
    <string name="deadLine">Временное ограничение</string>
    <string name="date_and_time">Дата и время</string>
    <string name="open_calendar">Открыть календарь</string>
    <string name="new_note">Note</string>
    <string name="save">Save</string>
    <string name="customization">Customization</string>
    <string name="new_pin_code_hint">0000</string>
    <string name="new_pin_code">Enter new pin:</string>
    <string name="saveBtn">SAVE</string>
    <string name="password_visibility">Видимость пароля</string>
    <string name="password_save">Пароль сохранён</string>
    <string name="password_no_save">Не корректоно введён пароль</string>
    <string name="settings">Settings</string>
    <string name="pin_circle">pin_circle</string>
    <string name="invalid_pin_code">Пин код введён некорректно</string>
    <string name="warning">Warning</string>
    <string name="del_text_note">are you sure you want to delete the note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>