<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    tools:context=".activities.pincode.PinCodeActivity">

    <TextView
        android:id="@+id/tv_pinCode"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/enter_pin"
        android:textColor="@color/EnterPinColor"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_1"
        style="@style/MyButtonStyle"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_1"
        app:layout_constraintEnd_toStartOf="@+id/bt_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/bt_2"
        style="@style/MyButtonStyle"
        android:text="@string/button_2"
        app:layout_constraintEnd_toStartOf="@+id/bt_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_1"
        app:layout_constraintTop_toTopOf="@+id/bt_1" />

    <Button
        android:id="@+id/bt_3"
        style="@style/MyButtonStyle"
        android:layout_marginEnd="32dp"
        android:text="@string/button_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_2"
        app:layout_constraintTop_toTopOf="@+id/bt_2" />

    <Button
        android:id="@+id/bt_4"
        style="@style/MyButtonStyle"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_4"
        app:layout_constraintEnd_toStartOf="@+id/bt_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_1" />

    <Button
        android:id="@+id/bt_5"
        style="@style/MyButtonStyle"
        android:text="@string/button_5"
        app:layout_constraintEnd_toStartOf="@+id/bt_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_4"
        app:layout_constraintTop_toTopOf="@+id/bt_4" />

    <Button
        android:id="@+id/bt_6"
        style="@style/MyButtonStyle"
        android:layout_marginEnd="32dp"
        android:text="@string/button_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_5"
        app:layout_constraintTop_toTopOf="@+id/bt_5" />

    <Button
        android:id="@+id/bt_7"
        style="@style/MyButtonStyle"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_7"
        app:layout_constraintEnd_toStartOf="@+id/bt_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_4" />

    <Button
        android:id="@+id/bt_8"
        style="@style/MyButtonStyle"
        android:text="@string/button_8"
        app:layout_constraintEnd_toStartOf="@+id/bt_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_7"
        app:layout_constraintTop_toTopOf="@+id/bt_7" />

    <Button
        android:id="@+id/bt_9"
        style="@style/MyButtonStyle"
        android:layout_marginEnd="32dp"
        android:text="@string/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_8"
        app:layout_constraintTop_toTopOf="@+id/bt_8" />

    <Button
        android:id="@+id/bt_0"
        style="@style/MyButtonStyle"
        android:layout_marginTop="8dp"
        android:text="@string/button_0"
        app:layout_constraintEnd_toEndOf="@+id/bt_8"
        app:layout_constraintTop_toBottomOf="@+id/bt_8" />

    <Button
        android:id="@+id/button_delete"
        style="@style/MyButtonStyle"
        android:text="@string/button_delete"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/bt_9"
        app:layout_constraintTop_toTopOf="@+id/bt_0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <ImageView
        android:id="@+id/pinCircleFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:elevation="8dp"
        android:contentDescription="@string/pin_circle"
        android:src="@drawable/circle_empty"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/pinCircleSecond"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@android:drawable/radiobutton_off_background" />

    <ImageView
        android:id="@+id/pinCircleSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:contentDescription="@string/pin_circle"
        android:src="@drawable/circle_empty"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/pinCircleThird"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pinCircleFirst"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@android:drawable/radiobutton_off_background" />

    <ImageView
        android:id="@+id/pinCircleThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:contentDescription="@string/pin_circle"
        android:src="@drawable/circle_empty"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/pinCircleFourth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pinCircleSecond"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@android:drawable/radiobutton_off_background" />

    <ImageView
        android:id="@+id/pinCircleFourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/pin_circle"
        android:src="@drawable/circle_empty"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pinCircleThird"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@android:drawable/radiobutton_off_background" />

</androidx.constraintlayout.widget.ConstraintLayout>
